        ===== Bug fixes

        [float]
        ===== Chores

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-4.x]]
=== Node.js Agent version 4.x

See the <<upgrade-to-v4>> guide.


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* Improve Fastify instrumentation to no longer cause the https://fastify.dev/docs/latest/Reference/Warnings/#FSTDEP017[`FSTDEP017`]
  and https://fastify.dev/docs/latest/Reference/Warnings/#FSTDEP018[`FSTDEP018`]
  deprecation warnings. ({pull}3814[#3814])

[float]
===== Chores


[[release-notes-4.3.0]]
==== 4.3.0 - 2023/12/05

*Known issue*: Using the APM agent's <<esm>> with Node v18.19.0 is currently
not supported. Earlier versions of Node.js v18 and Node.js v20 and later
*are* supported. See <https://github.com/elastic/apm-agent-nodejs/issues/3784>
for details.

[float]
===== Features

* Add the <<apm-client-headers>> config option, to allow adding custom headers
  to HTTP requests made to APM server by the APM agent. ({issues}3759[#3759])

[float]
===== Bug fixes

* Fix the dependency version range for `@elastic/ecs-pino-format`.
  ({issues}3774[#3774])

[float]
===== Chores

* Skip undici tests for `undici` `>=5.28.0` and NodeJS `<14.18.0`.
  ({pull}3755[#3755])

* Change the log level of `Sending error to Elastic APM: ...` from `info` to
  `debug`. There is no need to clutter the log output with this message.
  ({issues}3748[#3748])

* Explicitly mark this package as being of type="commonjs". The experimental
  `node --experimental-default-type=module ...` option
  https://nodejs.org/en/blog/release/v20.10.0#--experimental-default-type-flag-to-flip-module-defaults[added in Node.js v20.10.0]
  means that a default to "commonjs" isn't guaranteed.


[[release-notes-4.2.0]]
==== 4.2.0 - 2023/11/23

[float]
===== Breaking changes
