@@ -252,8 +252,6 @@ Client.prototype.config = function (opts) {
   if (!this._conf.serverTimeout && this._conf.serverTimeout !== 0)
     this._conf.serverTimeout = 15000;
   if (!this._conf.serverUrl) this._conf.serverUrl = 'http://127.0.0.1:8200';
-  if (!this._conf.environment)
-    this._conf.environment = process.env.NODE_ENV || 'development';
   if (!this._conf.truncateKeywordsAt) this._conf.truncateKeywordsAt = 1024;
   if (!this._conf.truncateStringsAt) this._conf.truncateStringsAt = 1024;
   if (!this._conf.truncateCustomKeysAt) this._conf.truncateCustomKeysAt = 1024;
