@@ -188,7 +188,7 @@ const CONFIG_SCHEMA = [
   {
     name: 'environment',
     configType: 'string',
-    defaultValue: 'development',
+    defaultValue: process.env.NODE_ENV || 'development',
     envVar: 'ELASTIC_APM_ENVIRONMENT',
   },
   {
